--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,42 @@
 @font-face{
     font-family: 'Montserrat-Medium';
-    src: url(./fonts/Montserrat/Montserrat-Medium.ttf);
+    src: url(../fonts/Montserrat/Montserrat-Medium.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'CormorantInfant-SemiBold';
-    src: url(./fonts/Cormorant_Infant/CormorantInfant-SemiBold.ttf);
+    src: url(../fonts/Cormorant_Infant/CormorantInfant-SemiBold.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'CormorantInfant-Light';
-    src: url(./fonts/Cormorant_Infant/CormorantInfant-Light.ttf);
+    src: url(../fonts/Cormorant_Infant/CormorantInfant-Light.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'CormorantInfant-MediumItalic';
-    src: url(./fonts/Cormorant_Infant/CormorantInfant-MediumItalic.ttf);
+    src: url(../fonts/Cormorant_Infant/CormorantInfant-MediumItalic.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'Montserrat-Medium';
-    src: url(./fonts/Montserrat/Montserrat-Medium.ttf);
+    src: url(../fonts/Montserrat/Montserrat-Medium.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'Montserrat-Regular';
-    src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
+    src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
     font-style: normal;
     font-weight: 700;
 }
 @font-face{
     font-family: 'CormorantInfant-SemiBoldItalic';
-    src: url(./fonts/Cormorant_Infant/CormorantInfant-SemiBoldItalic.ttf);
+    src: url(../fonts/Cormorant_Infant/CormorantInfant-SemiBoldItalic.ttf);
     font-style: normal;
     font-weight: 700;
 }
@@ -49,7 +49,7 @@ a {
     text-decoration: none;
 }
 body{
-    background-image: url(./img/background.jpg);
+    background-image: url(../img/background.jpg);
     display: flex;
     align-items: center;
     
